# Mandelbrot_GPU

./: CMakeLists.txt  README.md  mandelbrot.cpp
